overflow issue is resolved

--- a/client/StichHub/src/index.css
+++ b/client/StichHub/src/index.css
@@ -87,3 +87,15 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(2px);
 }
+.last-txt{
+  margin-top: -12px;
+}
+.img-style{
+  border-radius: 25px!important;
+}
+.last-txt-C{
+  margin-top: -10px;
+}
+.ggl-btn{
+  margin-top: -10px!important;
+}
